tests/transpiler/x/py/save_jsonl_stdout.py
# Code generated by Mochi transpiler.
# Version 0.10.34, generated on 2025-07-22 10:04 +0700
from __future__ import annotations
from dataclasses import dataclass
from typing import Any, List, Dict
import json

@dataclass
class People:
    name: str
    age: int

people = [People("Alice", 30), People("Bob", 25)]
for _row in people:
    print(json.dumps(_row))
